<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_background_fragment"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.example.pet.SurveyStep02">

            <ImageButton
                android:id="@+id/imageButtonChooseMood"
                style="@style/BackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewProgressBarChooseMood"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButtonChooseMood"
                app:srcCompat="@drawable/progress_bar_02" />

            <TextView
                android:id="@+id/textViewQuestion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/pt_serif_bold"
                android:text="@string/text_header_step_02"
                android:textColor="@color/white_step02"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewProgressBarChooseMood" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="33dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/pt_sans"
                android:text="@string/text_discription_step_02"
                android:textColor="@color/color_text_step02"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewQuestion" />

            <TextView
                android:id="@+id/textViewHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/pt_serif_bold"
                android:text="@string/text_wellbeing"
                android:textColor="@color/color_title_text_step02"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />


            <ToggleButton
                android:id="@+id/toggleButton1ChooseMood"
                style="@style/ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:textOff="@string/text_button_var_1_step_02"
                android:textOn="@string/text_button_var_1_step_02"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHeader" />

            <ToggleButton
                android:id="@+id/toggleButton2ChooseMood"
                style="@style/ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:textOff="@string/text_button_var_2_step_02"
                android:textOn="@string/text_button_var_2_step_02"
                app:layout_constraintBottom_toBottomOf="@+id/toggleButton1ChooseMood"
                app:layout_constraintStart_toEndOf="@+id/toggleButton1ChooseMood"
                app:layout_constraintTop_toTopOf="@+id/toggleButton1ChooseMood" />

            <ToggleButton
                android:id="@+id/toggleButton3ChooseMood"
                style="@style/ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:textOff="@string/text_button_var_3_step_02"
                android:textOn="@string/text_button_var_3_step_02"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toggleButton1ChooseMood" />

            <ToggleButton
                android:id="@+id/toggleButton4ChooseMood"
                style="@style/ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:textOff="@string/text_button_var_4_step_02"
                android:textOn="@string/text_button_var_4_step_02"
                app:layout_constraintBottom_toBottomOf="@+id/toggleButton3ChooseMood"
                app:layout_constraintStart_toEndOf="@+id/toggleButton3ChooseMood"
                app:layout_constraintTop_toTopOf="@+id/toggleButton3ChooseMood" />

            <ToggleButton
                android:id="@+id/toggleButton5ChooseMood"
                style="@style/ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:textOff="@string/text_button_var_5_step_02"
                android:textOn="@string/text_button_var_5_step_02"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toggleButton3ChooseMood" />

            <ToggleButton
                android:id="@+id/toggleButton6ChooseMood"
                style="@style/ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:textOff="@string/text_button_var_6_step_02"
                android:textOn="@string/text_button_var_6_step_02"
                app:layout_constraintBottom_toBottomOf="@+id/toggleButton5ChooseMood"
                app:layout_constraintStart_toEndOf="@+id/toggleButton5ChooseMood"
                app:layout_constraintTop_toTopOf="@+id/toggleButton5ChooseMood" />

            <ToggleButton
                android:id="@+id/toggleButton7ChooseMood"
                style="@style/ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:textOff="@string/text_button_var_7_step_02"
                android:textOn="@string/text_button_var_7_step_02"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toggleButton5ChooseMood" />

            <ToggleButton
                android:id="@+id/toggleButton8ChooseMood"
                style="@style/ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:textOff="@string/text_button_var_8_step_02"
                android:textOn="@string/text_button_var_8_step_02"
                app:layout_constraintBottom_toBottomOf="@+id/toggleButton7ChooseMood"
                app:layout_constraintStart_toEndOf="@+id/toggleButton7ChooseMood"
                app:layout_constraintTop_toTopOf="@+id/toggleButton7ChooseMood" />

            <Button
                android:id="@+id/buttonContinueChooseMood"
                style="@style/ButtonContinue"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toggleButton7ChooseMood" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</ScrollView>
